--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@
 
 .modal-outer {
   display: grid;
-  background: hsla(50, 100%, 50%, 0.7);
+  background: rgba(0, 0, 0, .6);
   position: fixed;
   height: 100vh;
   width: 100vw;
